[package]
name = "otc-swap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "otc_swap"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = {version="0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
spl-token = "7.0.0"
pyth-sdk-solana = "0.10.5"
